copyedited and added externals links to goh pages

--- a/app/views/pages/artistgoh.html.erb
+++ b/app/views/pages/artistgoh.html.erb
@@ -4,9 +4,12 @@
 <%= image_tag("sam_head240X300.jpg", alt: "Sam Flegal - Artist Guest of Honor") %>
 <h3>About</h3>
 <p>
-Sam is an independent illustrator and co-host of One Fantastic Week, a weekly webshow about self employed fantasy artists. He also teaches and speaks at numerous conventions, colleges, workshops (including The Fantastic Workshop hosted by 1FW), and other events. Some of the topics Sam covers are salesmanship, art, breaking into the game industry, and succeeding as an independent artist.
-<br><br>
-In his personal work Sam explores his passion for Norse Mythology, a series called Fateful Signs. Learn more at FatefulSigns.com
+Sam is an independent illustrator and co-host of <%= link_to "One Fantastic Week", "https://www.1fantasticweek.com/" %>
+, a weekly webshow about self employed fantasy artists. He also teaches and speaks at numerous conventions, colleges, and
+workshops. Some of the topics Sam covers are salesmanship, art, breaking into the game industry, and succeeding as an independent artist.
+</p>
+<p>
+Sam's personal work explores his passion for Norse mythology through a series called <%= link_to "Fateful Signs", "https://www.fatefulsigns.com/" %>.
 </p>
 
 <%end%>
