--- a/app/views/pages/authorgoh.html.erb
+++ b/app/views/pages/authorgoh.html.erb
@@ -1,17 +1,42 @@
 <% content_for :content do %>
     <main role="main" class="container">
+    <div class="justify-content-center">
     <h2>Timothy Zahn</h2>
     <%= image_tag("Zahn-Pub-Photo-Color-240x300.jpg", alt: "Timothy Zahn - Author Guest of Honor") %>
+    </div>
     <h3>About</h3>
-    <p>Timothy Zahn (born September 1, 1951) is an American writer of science fiction and fantasy. He is known for the Thrawn series of Star Wars novels, and has published several other series of science fiction and fantasy novels, in addition to much short fiction.
+    <p>Timothy Zahn, born September 1, 1951, is an American writer of science fiction and fantasy. 
+    He is known for the Thrawn series of Star Wars novels, and has published several other series 
+    of science fiction and fantasy novels, in addition to a large body of short fiction work.
     </p>
     <h4>Career</h4>
     <p>
-    Zahn's novella Cascade Point won the 1984 Hugo Award. He is the author of the Blackcollar trilogy and the Cobra series (eight novels so far), twelve Star Wars expanded universe novels, including nine novels featuring Grand Admiral Thrawn: the Thrawn trilogy, the Hand of Thrawn duology, Outbound Flight, Choices of One, Star Wars: Thrawn, and Star Wars: Thrawn: Alliances.
-    <br><br>
-    LucasFilm at times referred to some of the more detailed Star Wars: The Roleplaying Game supplements from West End Games, and when Zahn started work on a new trilogy of Star Wars books, boxes of West End sourcebooks were delivered to him. At the time, Zahn was writing what would become known as the Thrawn trilogy, the first book of which was Heir to the Empire (1991). In turn, West End released sourcebooks for Zahn's three novels from 1992-1994.
-    <br><br>
-    The Thrawn trilogy marked a revival in the fortunes of the Star Wars franchise, bringing it widespread attention for the first time in years; all three Thrawn trilogy novels made the New York Times Best Seller List, and set the stage and tone for most of the franchise's expanded universe content. Zahn also wrote the young adult Dragonback series and the popular Conquerors' trilogy.
+    Zahn's novella Cascade Point won the 1984 Hugo Award. He has also written a plethora of other novels, 
+    including, but not limited to: 
+    <dl>
+        <dt>The Blackcollar Trilogy</dt>
+        <dt>The Cobra Series</dt>
+        <dt>Twelve Star Wars expanded universe novels</dt>
+            <dd>Grand Admiral Thrawn: the Thrawn Trilogy</dd>
+            <dd>The Hand of Thrawn Duology</dd>
+            <dd>Outbound Flight</dd>
+            <dd>Choices of One</dd>
+            <dd>Star Wars: Thrawn</dd>
+            <dd>Star Wars: Thrawn: Alliances</dd>
+        <dt>The Dragonback Series</dt>
+        <dt>Conqueror's Trilogy</dt>
+        <dt>For a full bibilography, you can visit <%= link_to "Zahn's Fantastic Fiction profile", "https://www.fantasticfiction.com/z/timothy-zahn/" %>
+    </dl>
+    </p>
+    <p>
+    When Zahn started work on the Thrawn Trilogy, LucasFilm provided him with <i class="bookTitle">Star Wars:
+    The Roleplaying Game</i> sourcebooks from West End Games, for source material. In turn, West End relased
+    sourcebooks based on the Thrawn Trilogy from 1992 - 1994.
+    </p>
+    <p>
+    The Thrawn trilogy marked a revival in the fortunes of the Star Wars franchise, bringing it widespread 
+    attention for the first time in years; all three Thrawn trilogy novels made the New York Times Best 
+    Seller List, and set the stage and tone for most of the franchise's expanded universe content. 
     </p>
     <%end%>
     </main>
