--- a/app/views/pages/costuminggoh.html.erb
+++ b/app/views/pages/costuminggoh.html.erb
@@ -4,10 +4,20 @@
 <%= image_tag("Batman-50-Jim-Lee-Cover-240x300.jpg", alt: "Michael & Margie Vizcarra Cox - Costuming Guests of Honor") %>
 <h3>About</h3>
 <p>
-Michael Cox and Margie Vizcarra Cox are cosplayers from Atlanta, Georgia. They’ve been married and costuming for 12 years. In addition to conventions, they put on costumes for Heroes Alliance, a charity that strives to bring a real-life superhero experience to sick, disabled, and underprivileged children. They’ve brought their love of superheroes to children in Tampa, FL, Ft. Hood, TX, and Atlanta, GA.
-<br><br>
-Besides costuming, Michael is a U.S. Army veteran who now works in logistics in the civilian sector. Margie is a Corrective Exercise/Movement Pattern Specialist, costume designer at ThatChicGeekBoutique store on Etsy, and actor. They enjoy life with their three dogs. And they also foster dogs for a local animal rescue.
-<br><br>
+Michael and Margie Vizcarra Cox are cosplayers from Atlanta, Georgia. They’ve been married and costuming for 12 years. 
+In addition to conventions, they put on costumes for <%= link_to "Heroes Alliance", "http://www.heroesalliance.org/" %>,
+ a charity that strives to bring a real-life superhero experience to sick, disabled, and underprivileged children. 
+ They’ve brought their love of superheroes to children in Tampa, FL; Ft. Hood, TX; and Atlanta, GA.
+</p>
+<p>
+Besides costuming, Michael is a U.S. Army veteran who now works in logistics in the private sector. 
+Margie is a Corrective Exercise/Movement Pattern Specialist, costume designer at the <%= link_to "ThatChicGeekBoutique", "https://www.etsy.com/shop/ThatChicGeekBoutique"%> 
+store on Etsy, and actor.
+</p>
+<p>
+They share their life with their three dogs and foster many others for a local animal rescue.
+</p>
+<p>
 The family who cosplays together, stays together.
 </p>
 
