--- a/app/views/pages/gameinfo.html.erb
+++ b/app/views/pages/gameinfo.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Game Info')%>
-
+<% content_for :content do %>
     <main role="main" class="container">
 
       <div class="starter-template">
@@ -7,11 +7,11 @@
         <h1>Midsouth Con Gaming Information</h1>
         
         <p>
-        <%= link_to "Schedule", schedule_path%><br>
-        <%= link_to "Home", home_path %>
+        <%= link_to "Got a great game idea? Apply to run a game today!", gm_form2s_path %>
         </p>
               
               
         </div>
 
     </main><!-- /.container -->
+    <%end%>
