--- a/app/views/pages/gaminggoh.html.erb
+++ b/app/views/pages/gaminggoh.html.erb
@@ -4,17 +4,40 @@
 <%= image_tag("jolly-r-blackburn.jpg", alt: "Jolly Blackburn - Gaming Guest of Honor") %>
 <h3>About</h3>
 <p>
-Jolly Blackburn went to Ball State University.[citation needed] Jolly Blackburn majored in anthropology, history, and classical cultures in college.
-<br><br>
-Blackburn later joined the Army, and launched both the gaming magazine Shadis and his company Alderac Entertainment Group (named after his AD&D campaign world) while still in the Army. The original Shadis was a black-and-white digest featured gaming articles largely written by Blackburn, and each issue featured several pieces of fiction collectively called the "Alderac Anthonology" which detailed Blackburn's world of Alderac (one of Alderac's moons was Shadis, from which the magazine borrowed its name).
-<br><br>
-He conceived of having a comic strip that became Knights of the Dinner Table (KoDT) in 1990 as part of Shadis: "I had been a great fan of J.D. Webster's Finieous Fingers from the early Dragon Magazine, and I wanted something similar. Unfortunately, I couldn't find anyone willing to do a strip. Finally I sat down and drew out a very crude cartoon showing a gamemaster and a player sitting around a table arguing over a rules call." Blackburn based the KoDT characters on friends and fellow players, and B.A. Felton on himself. Blackburn conceived the cartoon as just filler material, but when he replaced it with more professional strips in one issue of Shadis there was an outcry from fans.
-<br><br>
-Blackburn was a sergeant in the army during Operation: Desert Storm. During the conflict Blackburn helped activate reservists for remedial training prior to deployment. The magazine, Shadis, was not published for a year and a half, but Blackburn got back into the publishing business when he returned in 1992. Alderac published three issues of a KoDT comic book in 1994-1995: "I soon became aware that the demand for KoDT was much higher than I had ever realized. That got me thinking about doing it on a monthly schedule."
-<br><br>
-Blackburn left Alderac in 1995 because he felt that he and his partners John Zinser and David Seay were looking for success in the CCG industry while he wanted to keep the company fun and small and focus on KoDT. He formed a new company called KODT Enteractive Facktory to publish KoDT monthly. While working at Shadis, Blackburn had made friends with employees of Kenzer & Company: "We discovered that we had so much in common, I decided to come aboard and throw my intellectual properties in the kitty."
-<br><br>
-Blackburn joined Kenzer in December 1996, and Kenzer published his comic book monthly beginning with a reprint of issue #4. The KoDT comic strip moved to Dragon in issue #226, becoming very popular. "Over the years I've often wondered just what it is that causes all the fuss... I'm the first to look at the typical strip and say, 'It's not all that!'" In 2001, Kenzer published the HackMaster role-playing game, which was based on the fictional game played by the characters in the Knights of the Dinner Table comic strip.
+Jolly Blackburn went to Ball State University where he majored in anthropology, history, and classical cultures. Blackburn later 
+launched the gaming magazine <i class="bookTitle">Shadis</i> and the Alderac Entertainment Group (named after his AD&D campaign world) 
+while serving in the Army. The original <i class="bookTitle">Shadis</i> was a black-and-white digest featuring gaming articles 
+largely written by Blackburn. Each issue featured several pieces of fiction collectively called the "Alderac Anthonology" which 
+detailed Blackburn's world of Alderac.
+</p>
+<p>
+He conceived of having a comic strip that became <i class="bookTitle">Knights of the Dinner Table</i> (KoDT) in 1990 as part of 
+<i class="bookTitle">Shadis</i>: "I had been a great fan of J.D. Webster's <i class="bookTitle">Finieous Fingers</i> from the 
+early <i class="bookTitle">Dragon Magazine</i>, and I wanted something similar. Unfortunately, I couldn't find anyone willing to 
+do a strip. Finally I sat down and drew out a very crude cartoon showing a gamemaster and a player sitting around a table arguing 
+over a rules call." Blackburn based the KoDT characters on friends and fellow players, and B.A. Felton on himself. The cartoon 
+was only meant to be filler material, but when he replaced it with more professional strips in one issue of <i class="bookTitle">Shadis</i> 
+there was an outcry from fans.
+</p>
+<p>
+Blackburn was a sergeant in the Army during Operation: Desert Storm. During the conflict Blackburn helped activate reservists for 
+remedial training prior to deployment. <i class="bookTitle">Shadis</i> went on hiatus for a year and half until Blackburn returned in 1992.
+Alderac published three issues of a KoDT comic book in 1994-1995: "I soon became aware that the demand for KoDT was much higher 
+than I had ever realized. That got me thinking about doing it on a monthly schedule."
+</p>
+<p>
+Blackburn left Alderac in 1995 because he felt that he and his partners John Zinser and David Seay were looking for success in the 
+CCG industry while he wanted to keep the company fun and small and focus on KoDT. He formed a new company called KODT Enteractive 
+Facktory to publish KoDT monthly. While working at <i class="bookTitle">Shadis</i>, Blackburn had made friends with employees of 
+Kenzer & Company: "We discovered that we had so much in common, I decided to come aboard and throw my intellectual properties in the 
+kitty."
+</p>
+<p>
+Blackburn joined Kenzer in December 1996, and Kenzer published his comic book monthly beginning with a reprint of issue #4. 
+The KoDT comic strip moved to <i class="bookTitle">Dragon Magazine</i> in issue #226, becoming very popular. 
+"Over the years I've often wondered just what it is that causes all the fuss... I'm the first to look at the typical strip and say, 
+'It's not all that!'" In 2001, Kenzer published the HackMaster role-playing game, which was based on the fictional game played 
+by the characters in the <i class="bookTitle">Knights of the Dinner Table</i> comic strip.
 </p>
 
 <%end%>
