--- a/app/views/pages/sciencegoh.html.erb
+++ b/app/views/pages/sciencegoh.html.erb
@@ -4,19 +4,34 @@
     <%= image_tag("Jim-Beall-2018-photo240x300.jpg", alt: "Jim Beall - Science Guest of Honor") %>
     <h3>About</h3>
     <p>
-    Jim Beall (BS-Math, MBA, PE) has been a nuclear engineer for over 40 years, a war gamer for over 50, and an avid reader of science fiction and fantasy for even longer. His experience in nuclear engineering and power systems began as a naval officer, shortly after surviving one of Admiral Rickover’s infamous interviews, aboard USS Long Beach (CGN-9). Civilian experience includes design, construction, inspection, enforcement, and assessment with a nuclear utility, an architect engineering firm, and the US Nuclear Regulatory Commission (USNRC).  Assignments at the USNRC include reactor inspector, inspection team leader, safety analyst, and reactor policy assistant to three different Presidential-appointed USNRC Commissioners while earning the agency’s Meritorious and Distinguished Service awards.
-<br><br>
-Duties of those policy-level posts included substantial research into alternative and speculative energy sources, as well as energy forecasts.  Some of those other sources were coal, oil, hydro, geothermal, tidal, solar, wind, fracking, space-based, heavy water reactors, breeder reactors, fusion, and even anti-matter.
-<br><br>
-Coauthor of Journal of the British Interplanetary Society (JBIS) paper, “Ecological Engineering Considerations for ISU’s Worldship Project.” Baen Books (baen.com) has published six of his non-fiction articles:
-<br><br>
-– “Our Worldship Broke!”
-<br>
-– “Case Studies in Handwavium”<br>
-– “From Corvus to Keyhole — Shipyards: Past, Present, and Science Fiction”<br>
-– “Radium Girls of Science and Science Fiction”<br>
-– “Atomic Follies”<br>
-– “Grid Wars: Innovation, Feuds, Rivalry, and Revenge in the Never-ending Battle to Electrify America and the Planet”
+    Jim Beall (BS-Math, MBA, PE) has been a nuclear engineer for over 40 years, a war gamer for over 50, 
+    and an avid reader of science fiction and fantasy for even longer. His experience in nuclear engineering and 
+    power systems began as a Naval officer, shortly after surviving one of Admiral Rickover’s infamous interviews, 
+    aboard USS Long Beach (CGN-9). Beall's civilian experience includes design, construction, inspection, enforcement, 
+    and assessment with a nuclear utility, an architect engineering firm, and the US Nuclear Regulatory Commission (USNRC). 
+    Assignments at the USNRC include reactor inspector, inspection team leader, safety analyst, and reactor policy assistant 
+    to three different Presidential-appointed USNRC Commissioners while earning the agency’s Meritorious and Distinguished 
+    Service awards.
+    </p>
+    <p>
+Duties of those policy-level posts included substantial research into alternative and speculative energy sources, 
+as well as energy forecasts. This research included coal, oil, hydro, geothermal, tidal, solar, wind, fracking, space-based, 
+heavy water reactors, breeder reactors, fusion, and even anti-matter.
+</p>
+    <p>
+Beall's coauthored “Ecological Engineering Considerations for ISU’s Worldship Project.”, a paper 
+published in the <%= link_to "Journal of the British Interplanetary Society", "http://www.jbis.org.uk/" %> (JBIS).
+Baen Books (baen.com) has published six of his non-fiction articles:
+</p>
+    <p>
+    <dl>
+        <dt>– “Our Worldship Broke!”</dt>
+        <dt>– “Case Studies in Handwavium”</dt>
+        <dt>– “From Corvus to Keyhole — Shipyards: Past, Present, and Science Fiction”</dt>
+        <dt>– “Radium Girls of Science and Science Fiction”</dt>
+        <dt>– “Atomic Follies”</dt>
+        <dt>– “Grid Wars: Innovation, Feuds, Rivalry, and Revenge in the Never-ending Battle to Electrify America and the Planet”</dt>
+    </dl>
     </p>
 
 
