--- a/app/views/pages/schedule.html.erb
+++ b/app/views/pages/schedule.html.erb
@@ -41,7 +41,7 @@
             <tbody>
               <% @gm_form2s.each do |gm_form2| %>
               <tr>
-                  <td><%= gm_form2.games %></td>
+                  <td><%= gm_form2.title_of_adventure_or_session %></td>
 
                   
               </tr>
