dont change paths anymore

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
               <li class="nav-item"><%= link_to "Schedule", schedule_path%></li>
               <li class="nav-item"><%= link_to "Panelists", panelist_forms_path%></li>
-              <li class="nav-item"><%= link_to "Gaming", gameinfo_path%></li>
+              <li class="nav-item"><%= link_to "Gaming", gm_form2s_path%></li>
               <li class="nav-item"><%= link_to "Dealers", dealer_forms_path%></li>
               <li class="nav-item"><%= link_to "Hotel", hotels_path%></li>
               <li class="nav-item"><%= link_to "Pricing", pricinginformation_path%></li>
@@ -84,7 +84,7 @@
 
               <li class="nav-item"><%= link_to "Schedule", schedule_path%></li>
               <li class="nav-item"><%= link_to "Panelists", panelist_forms_path%></li>
-              <li class="nav-item"><%= link_to "Gaming", gameinfo_path%></li>
+              <li class="nav-item"><%= link_to "Gaming", gm_form2s_path%></li>
               <li class="nav-item"><%= link_to "Dealers", dealer_forms_path%></li>
               <li class="nav-item"><%= link_to "Hotel", hotels_path%></li>
               <li class="nav-item"><%= link_to "Pricing", pricinginformation_path%></li>
