--- a/app/views/dealer_forms/new.html.erb
+++ b/app/views/dealer_forms/new.html.erb
@@ -1,11 +1,7 @@
-<main role="main" class="container">
-
-    <h1>New Dealer Form</h1>
-
+<% content_for :content do %>
+    <main role="main" class="container">
 
     <%= render 'form', user_id: @user.id, dealer_form: @dealer_form%>
 
-<p>
-    <%= link_to 'Back', users_path %>
-</p>
+<%end%>
 </main><!-- /.container -->
